--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,12 @@
 
 <body>
     <div class="login">
-        <h1>Login</h1>
-        <div class="links">
-            <a href="{{ url_for('login') }}" class="active">Login</a>
-            <a href="#">Register</a>
-        </div>
-        <form action="{{ url_for('login') }}" method="post">
+        <h1>WELCOME</h1>
+        <form action="{{ url_for('problem_library') }}" method="POST">
             <label for="username">
                 <i class="fas fa-user"></i>
             </label>
-            <input type="text" name="username" placeholder="Username" id="username" required>
-            <label for="password">
-                <i class="fas fa-lock"></i>
-            </label>
-            <input type="password" name="password" placeholder="Password" id="password" required>
-            <div class="msg">{{ msg }}</div>
+            <input type="text" name="username" placeholder="學號" id="username" required>
             <input type="submit" value="Login">
         </form>
     </div>
