--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>Login</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    </head>
 
-<body>
-    <div class="login">
-        <h1>WELCOME</h1>
-        <form action="{{ url_for('problem_library') }}" method="POST">
-            <label for="username">
-                <i class="fas fa-user"></i>
-            </label>
-            <input type="text" name="username" placeholder="學號" id="username" required>
-            <input type="submit" value="Login">
-        </form>
-    </div>
-</body>
+    <body>
+        <div class="login">
+            <h1>WELCOME</h1>
+            <form action="{{ url_for('welcome') }}" method="POST">
+                <label for="username">
+                    <i class="fas fa-user"></i>
+                </label>
+                <input type="text" name="username" placeholder="學號" id="username" required>
+                <input type="submit" value="Login">
+            </form>
+        </div>
+    </body>
 
 </html>
