--- a/templates/db_import.html
+++ b/templates/db_import.html
@@ -2,7 +2,12 @@
     <input type="file" name="file" accept=".csv">
     <input type = "submit" value="Upload">  
 </form>
-<p style="color:blue;">Choose csv file to upload</p>
-<form action="/show_data" target="_blank">
-    <input type="submit" value="Show CSV"/>
-</form>
+{% if upload%}
+    <p style="color:green;"> File uploaded successfully!! </p>
+    <form action="{{ url_for('showData') }}" target="_blank">
+        <input type="submit" value="Show CSV">
+    </form>
+{% else %}
+    <p style="color:blue;">Choose csv file to upload</p>
+{%endif%}
+
