--- a/templates/welcome_user.html
+++ b/templates/welcome_user.html
@@ -16,10 +16,10 @@
             </h1>
             {% endif %}
         </div>
-        {% if user.uploads%}
+        <!-- {% if user.uploads%}
             {% include 'db_import_s.html' %}
         {% else %}
             {% include 'db_import.html' %}
-        {%endif%}
+        {%endif%} -->
     </body>
 </html>
