--- a/templates/welcome_user.html
+++ b/templates/welcome_user.html
@@ -15,6 +15,7 @@
                 Welcome Back,{{user.id}}!
             </h1>
             {% endif %}
+            <a href="{{url_for('import_csv')}}">GO</a>
         </div>
         <!-- {% if user.uploads%}
             {% include 'db_import_s.html' %}
