--- a/templates/result.html
+++ b/templates/result.html
@@ -15,9 +15,17 @@
             <div class="flex-child">
                 <h1>Result Display</h1>
                 <textarea name="prompt_display"rows="50"cols="100" readonly>
-                    {{ans.new_solution}}
+                    {{ans.instruction}}
+                    <br/>
+                    {{ans.modification}}
+                    <br/>
+                    {{ans.relation}}
                 </textarea>
             </div>
         </div>
     </body>
+
 </html>
+<script type="text/javascript">
+    
+</script>
