--- a/static/db_import.css
+++ b/static/db_import.css
@@ -3,9 +3,9 @@
   top: 50%;  
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #0084ff;
+  background-color: 	#0066CC;
   border-radius: 12px;
-  color: #000;
+  color: #fff;
   cursor: pointer;
   font-weight: bold;
   padding: 10px 15px;
@@ -23,7 +23,7 @@
 .button-32:not(:disabled):hover,
 .button-32:not(:disabled):focus {
   outline: 0;
-  background: #f1f3f4;
+  background: #000;
   box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
 }
 
