--- a/static/result.css
+++ b/static/result.css
@@ -72,3 +72,9 @@ p{
     -webkit-filter: saturate(0.2) opacity(0.5);
     cursor: not-allowed;
   }
+
+  textarea{
+    overflow-y: scroll;
+    height: 300px;
+    width:800px;
+  }
