--- a/templates/prompt_build.html
+++ b/templates/prompt_build.html
@@ -157,7 +157,7 @@
                         Solution:solution,
                         Role:role
             }
-            console.log(choice)
+            // console.log(choice)
             $.ajax({
                 type:"POST",
                 url:"/result",
