--- a/static/result.css
+++ b/static/result.css
@@ -40,8 +40,6 @@ p{
 
 .button-32 {
     position: relative;
-    top: 50%;  
-    left: 50%;
     transform: translate(-50%, -50%);
     background-color: #0084ff;
     border-radius: 12px;
@@ -58,6 +56,7 @@ p{
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    margin-top: 10px;
   }
   
   .button-32:not(:disabled):hover,
