--- a/templates/next.html
+++ b/templates/next.html
@@ -6,7 +6,10 @@
     <body>
         <div class="main">
             <div class="flex-child">
-                
+                <h1>GPT Ask you</h1>
+                <div class="n_problem" id = "q">
+                    
+                </div>
             </div>
 
             <div class="flex-child">
@@ -17,3 +20,8 @@
     </body>
 
 </html>
+<script type="text/javascript">
+    var q = {{gpt|safe}}
+    var d = q['question'].replace(/\n/g,'<br>')
+    $('#q').html(d)
+</script>
