--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='result.css') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <title>Result</title>
     </head>
     <body>
         <div class="main">
