--- a/static/select.css
+++ b/static/select.css
@@ -1,33 +1,15 @@
-body {
+body{
     background-color: #435165;
-    
 }
-.welcome{
+.select_topic{
     position: absolute;
+    display: block;
+    width: 150px;
+    height: auto;
     top: 50%;
     left: 50%;
-    width: 600px;
-    height: 600px;
-    margin: -300px 0 0 -300px;
-    text-align: center;
+    margin: -200px 0 0 -50px;
 }
-.welcome_text{
-    width: auto;
-    height: 100px;
-    /* text-align: center; */
-    justify-content: center;
-    
-}
-.welcome_but{
-    margin-top: 20px;
-    
-}
-
-p{
-    font-size: 50px;
-    color: #fff;
-}
-
 input{
     width:150px;
     height:50px;
@@ -45,4 +27,3 @@ input:hover{
     background-color:#fff;
     border:2px #003C9D solid;
 }
-
