--- a/templates/topic_1.html
+++ b/templates/topic_1.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='prompt_build.css') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>TOPIC 1</title>
     </head>
     <body>
         <div class="main">
